compiler/testData/diagnostics/tests/enum/inheritFromEnumEntry.fir.kt
enum class E {
    ENTRY
}

class A : <!UNRESOLVED_REFERENCE!>E.ENTRY<!>
